--- a/project/localization/localizations.csv
+++ b/project/localization/localizations.csv
@@ -422,6 +422,7 @@ FLAIR_WON_DESC,Completed all campaign levels,Completou todos níveis da campanha
 FLAIR_DLC_DESC,Purchased any Liquidum DLC. Thanks for the support! ❤,Comprou qualquer DLC de Liquidum. Valeu pelo apoio! ❤,Comprou qualquer DLC de Liquidum. Valeu pelo apoio! ❤
 FLAIR_INC_DESC,Purchased Marvellous Inc.,Comprou Marvellous Inc,Comprou Marvellous Inc
 FLAIR_FUNCTIONAL_DESC,Purchased functional,Comprou functional,Comprou functional
+FLAIR_SPEEDRUN_DESC,Submitted a run to speedrun.com,Submeteu uma entrada no speedrun.com,Submeteu uma entrada no speedrun.com
 DEVELOPER_FLAIR_DESCRIPTION,Developer of Liquidum,Desenvolvedor de Liquidum,Desenvolvedor de Liquidum
 EXTRA_ISLAND_FLAIR_DESC,Completed island %s,Completou a ilha %s,Completou a ilha %s
 RESTORE_PURCHASES,Restore purchases,Restaurar compras,Restaurar compras
